Update Case Study 1.ipynb

--- a/Project - Case Study 1/Case Study 1.ipynb
+++ b/Project - Case Study 1/Case Study 1.ipynb
@@ -882,6 +882,154 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequoia Capital 64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df=pd.read_csv(r'startup_funding.csv')\n",
+    "df.InvestorsName.fillna('',inplace=True)\n",
+    "a=df.InvestorsName.str.split(',')\n",
+    "d={}\n",
+    "for i in a:\n",
+    "    for j in i:\n",
+    "        d[j.strip()]=d.get(j.strip(),0)+1\n",
+    "sr=pd.Series(d)\n",
+    "\n",
+    "sr.sort_values(ascending=False,inplace=True)\n",
+    "for i in sr.index[:1]:\n",
+    "    print(i,sr[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ola 8\n",
+      "Swiggy 7\n",
+      "Oyo 6\n",
+      "Flipkart 5\n",
+      "UrbanClap 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Ola                 8\n",
+       "Swiggy              7\n",
+       "Oyo                 6\n",
+       "Flipkart            5\n",
+       "UrbanClap           5\n",
+       "Capital Float       4\n",
+       "Paytm               4\n",
+       "Voonik              4\n",
+       "Jugnoo              4\n",
+       "Medinfi             4\n",
+       "MyTaxiIndia         3\n",
+       "Rivigo              3\n",
+       "Licious             3\n",
+       "Delhivery           3\n",
+       "Icertis             3\n",
+       "Simplilearn         3\n",
+       "Square Yards        3\n",
+       "YepMe               3\n",
+       "Box8                3\n",
+       "Lookup              3\n",
+       "Truebil             3\n",
+       "Goodbox             3\n",
+       "Grofers             3\n",
+       "Magicpin            3\n",
+       "Koovs               3\n",
+       "HolaChef            3\n",
+       "IndustryBuying      3\n",
+       "BigBasket           3\n",
+       "NoBroker            3\n",
+       "Furlenco            3\n",
+       "                   ..\n",
+       "BuyHatke            1\n",
+       "NewsHunt            1\n",
+       "LogicRoots          1\n",
+       "Crown-it            1\n",
+       "Grab.in             1\n",
+       "Belong              1\n",
+       "Team Indus          1\n",
+       "Zipgrid             1\n",
+       "OrangeTwig          1\n",
+       "TheKarrier          1\n",
+       "Lendingkart         1\n",
+       "OnlineRTI           1\n",
+       "TOFlo               1\n",
+       "ShabdaNagari        1\n",
+       "FreshDesk           1\n",
+       "ElastiRun           1\n",
+       "Sayfix              1\n",
+       "WorkApps            1\n",
+       "Wooplr              1\n",
+       "Book Servicing      1\n",
+       "Vistaar Finance     1\n",
+       "CraftsVilla         1\n",
+       "Room On Call        1\n",
+       "EasyKhaana          1\n",
+       "NeuroEquilibrium    1\n",
+       "Hotify              1\n",
+       "POPxo.com           1\n",
+       "AirZaar             1\n",
+       "Zappka              1\n",
+       "Milofy              1\n",
+       "Name: StartupName, Length: 1312, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Open and read data file as specified in the question\n",
+    "# Print the required output in given format\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "data=pd.read_csv(\"startup_funding.csv\")\n",
+    "data=data[np.logical_not(data.AmountInUSD.isnull())]\n",
+    "\n",
+    "data['StartupName'].replace('Ola Cabs','Ola',inplace=True)\n",
+    "data['StartupName'].replace('Olacabs','Ola',inplace=True)\n",
+    "data['StartupName'].replace('Flipkart.com','Flipkart',inplace=True)\n",
+    "data['StartupName'].replace('Paytm Marketplace','Paytm',inplace=True)\n",
+    "data['StartupName'].replace('Oyo Rooms','Oyo',inplace=True)\n",
+    "data['StartupName'].replace('Oyorooms','Oyo',inplace=True)\n",
+    "data['StartupName'].replace('OyoRooms','Oyo',inplace=True)\n",
+    "data['StartupName'].replace('OYO Rooms','Oyo',inplace=True)\n",
+    "data=data.StartupName\n",
+    "def fun(s):\n",
+    "    s=str(s)\n",
+    "\n",
+    "    return s\n",
+    "\n",
+    "data=data.apply(fun)\n",
+    "b=data.value_counts()\n",
+    "for i in range(5):\n",
+    "    print(b.index[i]+\" \"+str(b.values[i]))\n",
+    "    \n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
