--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -16579,6 +16579,60 @@
     "2017 1614\n",
     "2018 1710"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "702.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import csv\n",
+    "with open(\"year2017.csv\") as file_obj:\n",
+    "    file_data = csv.reader(file_obj, skipinitialspace= True) \n",
+    "    file_list = list(file_data)\n",
+    "    \n",
+    "Country = []\n",
+    "Wounded = []\n",
+    "for row in file_list[1:] :\n",
+    "        val = row[10]\n",
+    "        i = row[3]\n",
+    "        if val != '' and i==\"India\" :\n",
+    "            Wounded.append(float(val))\n",
+    "print(int(sum(Wounded)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
