--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -16615,10 +16615,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "156\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "with open('amazon_jobs_dataset.csv', encoding=\"latin-1\") as fp:\n",
+    "    f_data=csv.DictReader(fp,skipinitialspace=True)\n",
+    "    f_list=list(f_data)\n",
+    "    count=0\n",
+    "    for i in f_list:\n",
+    "        location=i['location'][:2]\n",
+    "        if('CA' == location):\n",
+    "            count+=1\n",
+    "    print(count)"
+   ]
   },
   {
    "cell_type": "code",
